<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.asisee.bookmarker.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_formFragment"
            app:destination="@id/formFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_home_to_rulesFragment"
            app:destination="@id/nav_rules" />
        <action
            android:id="@+id/action_nav_home_to_aboutFragment"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/formFragment"
        android:name="com.asisee.bookmarker.ui.form.FormFragment"
        android:label="@string/form_fragment_label" >
        <action
            android:id="@+id/action_formFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="bookmarkId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="sharedString"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/nav_rules"
        android:name="com.asisee.bookmarker.ui.rules.RulesFragment"
        android:label="@string/rules_fragment_label"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.asisee.bookmarker.ui.about.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about" />

</navigation>