<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.asisee.bookmarker.ui.form.FormViewModel" />

        <variable
            name="bookmark"
            type="com.asisee.bookmarker.database.Bookmark" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5D6A7"
        tools:context=".ui.form.FormFragment">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:layout_marginBottom="@dimen/form_margin"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/form_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/title_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:fontFamily="@font/roboto"
            android:hint="@string/title_edit_hint"
            android:inputType="text"
            android:text="@={bookmark.title}"

            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/form_title"
            app:layout_constraintStart_toStartOf="@+id/form_title"
            app:layout_constraintTop_toBottomOf="@+id/form_title" />

        <EditText
            android:id="@+id/url_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:fontFamily="@font/roboto"
            android:hint="@string/url_edit_hint"
            android:inputType="textUri|text"
            android:text="@={bookmark.url}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/title_edit"
            app:layout_constraintStart_toStartOf="@+id/title_edit"
            app:layout_constraintTop_toBottomOf="@+id/title_edit" />

        <Button
            android:id="@+id/save_button"
            style="@style/form_button_style"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="#81C784"
            android:onClick="@{() -> viewModel.insert(bookmark)}"
            android:text="@string/form_button_add_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_edit" />

        <Button
            android:id="@+id/edit_button"
            style="@style/form_button_style"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/form_margin"
            android:background="@android:color/holo_blue_light"
            android:onClick="@{() -> viewModel.update(bookmark)}"
            android:text="@string/form_button_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/url_edit"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <Button
            android:id="@+id/delete_button"
            style="@style/form_button_style"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/form_margin"
            android:background="@android:color/holo_red_light"
            android:text="@string/form_button_delete_text"
            app:layout_constraintEnd_toEndOf="@+id/url_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_button"
            app:layout_constraintTop_toBottomOf="@+id/save_button"
            android:onClick="@{() -> viewModel.delete(bookmark)}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>